<resources>
    <string name="app_name">Hepatitis Prisoners</string>
    <string name="header"></string>
    <string name="GENDER">fggh</string>
    <string name="dashboard">Dashboard</string>
    <string name="please_select_option">Please select an option</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_unselect_all">Unselect All</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_task_cancelled">Cancelled</string>
    <string name="toast_time_out">Request time out</string>
    <string name="toast_network_error">Network Error</string>
    <string name="attendance">Attendance</string>
    <string name="performance_book">Performance Book</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="login_btn">Login</string>
    <string name="cancel_btn">Cancel</string>
    <string name="tap_to_capture_selfie">Tap to capture selfie</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="on_location_submit">On Location/Submit</string>
    <string name="ok">Ok</string>
    <string name="please_select_image">Please select Image</string>
    <string name="please_enter_empID">Please enter EmployeeID</string>
    <string name="please_enter_Feild">Please fill the all feilds</string>
    <string name="no_internet_connect_available">No internet connection available</string>
    <string-array name="nature_of_emergency">
        <item>Medical</item>
        <item>Road Crash</item>
        <item>Delivery Case</item>
        <item>Crime Incident</item>
        <item>Fire</item>
        <item>Fall</item>
        <item>Electric Shock</item>
        <item>Work/OCC Injury</item>
        <item>Suicide</item>
        <item>Doping/Poisoning</item>
        <item>Structure Collapse</item>
        <item>Drowning</item>
        <item>Misc.</item>
    </string-array>
    <string name="no_of_victim">No. of Victim</string>
    <string name="activity_data_time">Activity Date Time</string>
    <string-array name="place_of_emergency">
        <item>Road</item>
        <item>Work</item>
        <item>Home</item>
        <item>School</item>
        <item>Other (s)</item>
    </string-array>
    <string name="outcome">Outcome/Actions</string>
    <string name="name">Victim Name</string>
    <string name="contact_no">Contact No*</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_nature_of_emergency">Please enter nature of emergency</string>
    <string name="please_Enter_no_of_victim">Please enter no of victim</string>
    <string name="please_Enter_EcNo">Please enter ecno</string>
    <string name="Please_fill_form_completely">Please fill form completely</string>
    <string name="Please_fill_section_completely">Please fill section completely</string>
    <string name="please_enter_place_of_emergency">Please enter Place of emergency</string>
    <string name="please_enter_outcome">Please enter outcome</string>
    <string name="record_saved_on_mobile">Record saved on mobile</string>
    <string name="attendance_marked_successfully">Attendance marked successfully</string>
    <string name="please_check_your_location_setting">Please check your location setting</string>
    <string name="record_has_been_saved_on_device">Record has been saved successfully on device</string>
    <string name="issue_saving_on_device">Issue saving on local device</string>
    <string name="please_fill_the_below_form">Please fill the below form</string>
    <string name="mark_your_attendance">Mark your attendance</string>
    <string name="ec_no">EC No</string>
    <string name="add_activity">Add Activity</string>
    <string name="pendinig_logs">Pending Logs</string>
    <string name="one">One</string>
    <string name="dob_les_than_tomorrow">Date should be less than today</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="more">More</string>
    <string name="login">Log in</string>
    <string name="search">تلاش کریں</string>
    <string name="Family_Search">Search</string>
    <string name="user_id">UserID</string>
    <string name="rescuer_id">Employee ID</string>
    <string name="user_pasword">Password</string>
    <string name="Password_G_8">Password greater than 8 words</string>
    <string name="enter_user_name">Enter User name</string>
    <string name="rescuer_id_error">Enter Rescuer ID greater than 6 digit</string>
    <string name="no_record_available">No record available</string>
    <string name="press_cloud_refresh_button">Press cloud refresh button…</string>
    <string name="ValidDigits">0123456789-abcdefghijklmnopqurstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" " </string>
    <string name="no_internet_connect">No Internet Connection</string>
    <string name="project_not_found">Project not found</string>
    <string name="param_missing">Param missing</string>
    <string name="response_is_empty">Response is empty.</string>
    <string name="Day_Month_Format">dd-MM-yyyy HH:mm</string>
    <string name="update_from_playstore">Update from playstore</string>
    <string name="app_version">App Version:</string>
    <string name="please_set_your_date_and_time">Please set your date,time and timezone to automatic</string>
    <string name="notes">Notes</string>
    <string name="turn_on_gps_location">Turn on gps location</string>
    <string name="survey_form">Survey form</string>
    <string name="scope_and_type_of_business">SCOPE AND TYPE OF BUSINESS</string>
    <string name="name_of_establishment">Name of Establishment</string>
    <string name="full_address_of_establishment">Full Address of Establishment</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="plot_no">Plot No.</string>
    <string name="name_of_owner">Name of Owner</string>
    <string name="contact_no_of_employer">Contact No. of Employer</string>
    <string name="cnic_of_employer">CNIC of Employer</string>
    <string name="nature_of_business">Nature of Business</string>
    <string name="text_area">Text Area</string>
    <string name="total_no_of_workers_engaged">Total No. of Workers Engaged</string>
    <string name="total_no_of_dependents">Total No. of Dependents</string>
    <string name="total_number_of_families">Total Number of Families</string>
    <string name="total_number_of_married_female_workers">Total Number of Married Female Workers</string>
    <string name="average_wages_of_workers">Average Wages of Workers</string>
    <string name="amount_of_wages_paid_t_workers_last_month">Amount of Wages paid t workers (last month)</string>
    <string name="capacity_of_organization">CAPACITY OF ORGANIZATION</string>
    <string name="name_of_any_ss_hospital_dispensary_which_exists_within_two_miles">Name of any SS Hospital/ Dispensary which exists within two miles</string>
    <string name="whether_any_dispensary_managed_by_employer_exists_or_not">Whether any dispensary managed by employer exists or not</string>
    <string name="facilities_provided_by_employer_cash_benefits_as_compared_with_ss_scheme">Facilities provided by employer (cash benefits) as compared with SS Scheme</string>
    <string name="please_fill">براہ مہربانی مکمل کریں</string>
    <string name="additional_information">ADDITIONAL INFORMATION</string>
    <string name="Connectivity_Issue">Connectivity Issue</string>
    <string name="dispensary_information">DISPENSARY INFORMATION</string>
    <string name="m_r_no">M.R NO (میڈیکل ریکارڈ نمبر)</string>
    <string name="mother_name">Mother Name (والدہ کا نام)</string>
    <string name="mother_cnic">Mother CNIC (والدہ کا قومی شناختی کارڈ نمبر)</string>
    <string name="father_name">Father Name (والد کا نام)</string>
    <string name="father_cnic">Father CNIC (والد کا قومی شناختی کارڈ نمبر)</string>
    <string name="address">RESIDENTIAL AREA</string>
    <string name="father_occupation">Father Occupation (والد کاپیشہ)</string>
    <string name="select_religion">Religion (مذہب کا انتخاب کریں)</string>
    <string name="grand_father_name">Grand Father Name (دادا کا نام)</string>
    <string name="name_of_child">Name Of Child (بچے کا نام)</string>
    <string name="sex">Gender</string>
    <string name="male">مرد</string>
    <string name="female">خاتون</string>
    <string name="transgender">خواجہ سرا</string>
    <string name="select_child_blood_group">Select Child Blood Group (بچے کابلڈ گروپ)</string>
    <string name="select_mother_blood_group">Select Mother Blood Group (والدہ کابلڈ گروپ)</string>
    <string name="annual_number">Annual Number(سالانہ نمبر)</string>
    <string name="date_of_birth">Date of Birth (پیدائش کی تاریخ)</string>
    <string name="date_of_dead_body_received">Date of dead body received(متوفی وصول کرنے کی تاریخ)</string>
    <string name="Date_of_Dead_Body_Handed_Over_to">Date of Dead Body Handed Over to</string>
    <string name="doctor_name_issuing_authority">Doctor Name/Issuing Authority (ڈاکٹر کا نام / جاری مقام)</string>
    <string name="gynae_unit">Gynae Unit</string>
    <string name="save">Save</string>
    <string name="reg_no">REG. NO (اندراج نمبر)</string>
    <string name="department">Department (شعبہ)</string>
    <string name="unit_ward">Unit / Ward (یونٹ / وارڈ)</string>
    <string name="patient_name">First Name*</string>
    <string name="s_o_d_o_w_o">S/O, D/O, W/O (بیٹا/ بیٹی/زوجہ)</string>
    <string name="patient_gaurdian_cnic">Deceased/Gaurdian CNIC (مریض / سرپرست کا قومی شناختی کارڈ نمبر)</string>
    <string name="guardian">Guardian</string>
    <string name="self">Self</string>
    <string name="age">Age (عمر)</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="cardiopulmonary_arrest_is_not_the_cause_of_death">*Cardiopulmonary arrest may not be appropriate cause of death( کارڈیپلمونری اریست موت کی وجہ سے نہیں ہے)</string>
    <string name="primary_cause_of_death">Primary Cause Of Death (موت کا بنیادی سبب)</string>
    <string name="secondary_cause_of_death">Secondary Cause Of Death (موت کا ثانوی سبب)</string>
    <string name="underline_cause_of_death">Underlying Cause (بنیادی وجہ)</string>
    <string name="date_of_admission">Date of Admission (داخلے کی تاریخ)</string>
    <string name="date_of_death">Date of Death(تاریخ وفات)</string>
    <string name="doctor_name">Doctor Name (ڈاکٹر کا نام )</string>
    <string name="death_on_arrival">Received Dead (آمد پر موت)</string>
    <string name="dead_body_recevied_by">Dead Body Handed Over to (متوفی موصول کی)</string>
    <string name="CNIC_of_Dead_Body_Handed_over_to">CNIC of Dead Body Handed over to</string>
    <string name="relation_with_the_deceased">Relation With The Deceased (متوفی کے ساتھ تعلق)</string>
    <string name="death_slip_form">Death Slip Form</string>
    <string name="birth_slip_form">Birth Slip Form</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="text_here">Text Here</string>
    <string name="dashBoard">DashBoard</string>
    <string name="Birth_Slip_Form">Birth Slip Form</string>
    <string name="Death_Slip_Form">Death Slip Form</string>
    <string name="Logout">لاگ آوٹ</string>
    <string name="DAYS">دن</string>
    <string name="MONTHS">مہینہ</string>
    <string name="YEAR">سال</string>
    <string name="Relation_with_Leader">سربراہ سے رشتہ</string>
    <string name="Profession">پیشہ *</string>
    <string name="Save">محفوظ کریں</string>
    <string name="login_header_text">Hepatitis and Infection Control</string>
    <string name="user_name">Username</string>
    <string name="password_1">Password</string>
    <string name="health_facility">سہولت مرکز</string>
</resources>