<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="#3E80B4"
android:orientation="vertical" >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:layout_marginTop="15dp">
    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="خاندان کے افراد"
                 android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
        />


    <Spinner
        android:id="@+id/family_member_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_custom_bg"
        android:hint="@string/Profession"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLength="50"
        android:spinnerMode="dialog"
        android:paddingVertical="10dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/colorPrimary"
        android:textDirection="rtl"
        android:textSize="14sp" />

 <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Relation_with_Leader"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
     android:layout_marginTop="20dp"/>


        <Spinner
            android:id="@+id/relation_with_leader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/dropdown_custom_bg"
            android:hint="@string/Relation_with_Leader"
            android:inputType="text"
            android:layoutDirection="rtl"
            android:maxLength="50"
            android:paddingVertical="10dp"
            android:spinnerMode="dialog"
            android:textAlignment="textStart"
            android:textDirection="rtl"
            android:textSize="14sp" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
                android:id="@+id/change_leader_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:paddingHorizontal="15dp"
                android:text="@string/Save"

                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>