<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_punjab_gov_hd"
            >

        </androidx.appcompat.widget.AppCompatImageView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="@dimen/margin_normal"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login_header_text"
                android:textColor="@color/color_black"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/user_name"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="10dp"
                android:gravity="right"
                android:textSize="16sp"
android:text="nur_thq_kamalia"



                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password_1"
                android:background="@drawable/spinner_custom_list"
                android:padding="10dp"
                android:gravity="right"
                android:autofillHints="@string/password_1"
                android:inputType="textPassword"
                android:textSize="16sp"
android:text="123456"

                />


            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginLeft="@dimen/margin_normal"-->
            <!--                android:layout_marginRight="@dimen/margin_normal"-->
            <!--                android:orientation="horizontal">-->


            <!--                <TextView-->
            <!--                    style="@style/NormalTextView"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="center"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="@string/keep_me_log_in"-->
            <!--                    android:textColor="@color/color_black"-->
            <!--                    android:textSize="@dimen/font_normal" />-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/cbLogin"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:button="@drawable/check_box_selector"-->
            <!--                    android:layout_margin="5dp"/>-->


            <!--            </LinearLayout>-->

            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:paddingHorizontal="50dp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/login"
                android:textColor="@color/color_white" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>