<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="معائنہ ہوا"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/isVisit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/dropdown_custom_bg"
        android:hint="@string/Profession"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLength="50"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:spinnerMode="dialog"
        android:textAlignment="textStart"
        android:textColorHint="@color/colorPrimary"
        android:textDirection="rtl"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/is_visit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:padding="5dp"
                android:layoutDirection="rtl"
                android:text="تاریخ"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/registration_tvAge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="right|center"
                android:padding="5dp"
                android:text=""
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight=".333">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DAYS"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/reg_month"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight=".333">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/MONTHS"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/reg_year"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight=".333">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/YEAR"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/health_facility"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/facility_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dropdown_custom_bg"
            android:hint="@string/Profession"
            android:inputType="text"
            android:layoutDirection="rtl"
            android:maxLength="50"
            android:paddingVertical="10dp"
            android:spinnerMode="dialog"
            android:textAlignment="textStart"
            android:textColorHint="@color/colorPrimary"
            android:textDirection="rtl"
            android:textSize="14sp" />

    </LinearLayout>



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="کارڈ کی تصویر"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/mr_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:paddingHorizontal="16dp">
            <Button
                android:id="@+id/card_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
               android:text="کارڈ کی تصویر"
                android:layoutDirection="rtl"
                android:visibility="visible"></Button>

            <ImageView
                android:id="@+id/ivSelfie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitXY" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/cancel_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@color/colorPrimaryDark"
            android:paddingHorizontal="15dp"
            android:text="منسوخ کریں"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/save_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@color/colorPrimaryDark"
            android:paddingHorizontal="15dp"
            android:text="@string/Save"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>